# Opiumware

./: .gitignore  README.MD  README.md  build.sh  install.sh  package-lock.json  package.json
src/: build.sh  frontend.js  index.html  index.js  intellisense.js  package-lock.json  package.json  preload.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: monaco.json
